Ajuste para o heroku.
Signed-off-by: Anthonini <anthonini@info.ufrn.br>